Retrive MachineLevelCloudPolicy with DM token only

BrowserDMToken storage should already read DM token from Registry.
MachineLevelCloudPolicyFetcher should be created if there is a DM token
avaiable.

Bug: 852903
Change-Id: Ib10f03a3c0c944358212d076b5c39f38fb88c4ce
Reviewed-on: https://chromium-review.googlesource.com/1101556
Commit-Queue: Owen Min <zmin@chromium.org>
Reviewed-by: Julian Pastarmov <pastarmovj@chromium.org>
Reviewed-by: Roger Tawa <rogerta@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567668}
Former-commit-id: f316f5997d28755b46c0312fbe0e3d829eca2b52